# FSDrive

./: .gitignore  FSDrive模型结构详解.md  README.md  UV_SETUP.md  clean_pkl.py  eval_and_vis.py  pyproject.toml  sigle_data_make.py
LLaMA-Factory/: eval_traj_100step.json  eval_traj_150step.json  eval_traj_200step.json  eval_traj_400step.json  eval_traj_50step.json  results.jsonl  results_juice_100.jsonl  results_juice_150.jsonl  results_juice_200.jsonl  results_juice_400.jsonl  results_juice_50.jsonl
LLaMA-Factory/data/: capsule_anomaly_sft.json  dataset_info.json  hazelunt_anomaly_sft.json  juice_3.json  juice_30.json  juice_anomaly_sft_train.json  juice_anomaly_sft_val.json  juice_orange.json  losiding_30_val.json  losiding_anomaly_sft.json  train_cot_motion_bottle.json  train_cot_motion_org_mini.json  transistor_anomaly_sft.json  (+10 more)
MoVQGAN/: gt_indices_capsule_normal.json  gt_indices_hazelunt_normal.json  gt_indices_juice_normal.json  gt_indices_losiding_normal.json  gt_indices_sft_bottle.json  gt_indices_transistor_normal.json  gt_indices_tuding_normal.json  gt_indices_wood_normal.json  gt_indices_zaocanhe_normal.json  sft_data.py
configs/: pretrain.yaml  sft.yaml
create_data/: mini_split.json  pretrain_data.py  sft_data.py  sft_data_mini.py
make_data/: README.md  build_dataset.py  dataset_task.md
randomizer/: CONVERGENCE_README.md  TOKEN_RANDOMIZE_README.md  batch_randomize.sh  multi_range_examples.sh  quick_reference.sh  randomize_tokens.py  simulate_convergence.py  test_randomize.sh  usage_examples.sh  verify_convergence.py  verify_multi_range.py  verify_output.py
tools/: fix_eval_traj.py  match.py
(+19 files in other folders)
